0027543: Samples - flickering when view is resized in MFC samples

Define proper window class for OpenGL window within
overridden method CView::PreCreateWindow().